--- a/src/app/components/episode-slider/episode-slider.component.css
+++ b/src/app/components/episode-slider/episode-slider.component.css
@@ -1,6 +1,6 @@
 .episode-section {
-  background-color: #100E22;
-  padding: 1rem;
+  background-color: #100e22;
+  padding: 1rem 0 2rem 2.5rem;
 }
 
 .episode-section h2 {
@@ -10,7 +10,6 @@
 
 .slider-container {
   position: relative;
-  overflow: hidden;
 }
 
 .episode-slider {
@@ -18,14 +17,14 @@
   overflow-x: auto;
   scroll-behavior: smooth;
   gap: 1rem;
-  padding-bottom: 1rem;
 }
+
 .episode-slider::-webkit-scrollbar {
   display: none;
 }
 
 .episode-card {
-  min-width: 200px;
+  width: 220px;
   flex-shrink: 0;
   color: white;
 }
@@ -33,41 +32,86 @@
 .thumbnail {
   position: relative;
 }
+
 .thumbnail img:first-child {
   width: 100%;
-  border-radius: 8px;
+  border-radius: 4px;
 }
+
 .pause-icon {
   position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 24px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border-radius: 50%;
+}
+
+.pause-icon img {
+  width: 20px;
+  height: 20px;
 }
 
 .title {
   margin-top: 8px;
   font-size: 0.9rem;
-  text-align: center;
+  padding-left: 0.5rem;
 }
 
 .nav {
   position: absolute;
-  top: 35%;
+  top: 50%;
   transform: translateY(-50%);
-  background-color: rgba(255, 255, 255, 0.1);
-  border: none;
   cursor: pointer;
-  padding: 0.4rem;
-  z-index: 1;
+  z-index: 10;
+  background-color: transparent;
+  border: none;
 }
 
 .nav.left {
-  left: 0;
+  left: 1%;
 }
+
 .nav.right {
-  right: 0;
+  right: 2%;
 }
 
 .nav img {
-  width: 24px;
+  width: 50px;
+  border: 3px solid #ff8731;
+  border-radius: 50%;
+}
+
+@media screen and (max-width: 768px) {
+  .episode-card {
+    width: 180px;
+  }
+
+  .nav img {
+    width: 40px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .episode-section {
+    background-color: #100e22;
+    padding: 1rem 0 2rem 1.5rem;
+  }
+
+  .episode-card {
+    width: 150px;
+  }
+
+  .title {
+    padding-left: 0.2rem;
+  }
+
+  .nav img {
+    width: 35px;
+  }
 }
