--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -19,5 +19,5 @@
   </div>
 
   <!-- Episodes Section -->
-  <app-episode-slider [slideId]="id" />
+  <app-episode-slider [slideId]="CurrentId" />
 </div>
