--- a/src/app/components/episode-slider/episode-slider.component.css
+++ b/src/app/components/episode-slider/episode-slider.component.css
@@ -115,3 +115,59 @@
     width: 35px;
   }
 }
+
+/* Video Js */
+
+.video-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  width: 50%;
+}
+
+.video-js {
+  width: 100%;
+}
+
+::ng-deep .vjs-skip-backward-button,
+::ng-deep .vjs-skip-forward-button {
+  position: absolute !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+  transition: opacity 01s ease !important;
+  height: auto !important;
+  cursor: pointer;
+  width: auto !important;
+}
+
+/* Backward button left 10% */
+::ng-deep .vjs-skip-backward-button {
+  left: 10% !important;
+}
+
+::ng-deep .custom-skip-button {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+::ng-deep .custom-skip-button .skip-icon {
+  width: 3rem;
+  height: 3rem;
+}
+
+::ng-deep .custom-skip-button .skip-text {
+  font-size: 1.5rem;
+}
+
+/* Forward button right 10% */
+::ng-deep .vjs-skip-forward-button {
+  right: 10% !important;
+}
+
+::ng-deep .video-js:not(.vjs-has-started) .vjs-skip-backward-button,
+::ng-deep .video-js:not(.vjs-has-started) .vjs-skip-forward-button {
+  display: none !important;
+}
