--- a/src/app/components/episode-slider/episode-slider.component.html
+++ b/src/app/components/episode-slider/episode-slider.component.html
@@ -14,7 +14,7 @@
   <h2>Episodes</h2>
 
   <div class="slider-container">
-    <button *ngIf="canScrollLeft" class="nav left" (click)="scrollLeft()">
+    <button *ngIf='canScrollLeft' class="nav left" (click)="scrollLeft()">
       <img src="assets/orange-prev.svg" />
     </button>
 
